--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flexbox Header</title>
+  <title>FlexDash</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Google Font -->
@@ -12,27 +12,63 @@
 </head>
 <body>
 
-  <header class="header">
-    
-    <!-- Left Section -->
-    <div class="logo">
-      Parth<span>Website</span>
-    </div>
+<div class="dashboard">
 
-    <!-- Center Section -->
-    <nav class="nav">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Contact</a>
+  <!-- Sidebar -->
+  <aside class="sidebar">
+    <h2 class="brand">FlexDash</h2>
+    <nav class="sidebar-nav">
+      <a href="#">Dashboard</a>
+      <a href="#">Analytics</a>
+      <a href="#">Users</a>
+      <a href="#">Reports</a>
+      <a href="#">Settings</a>
     </nav>
+  </aside>
 
-    <!-- Right Section -->
-    <div class="cta">
-      <button>Get Started</button>
-    </div>
+  <!-- Main Content -->
+  <div class="main">
 
-  </header>
+    <!-- Topbar -->
+    <header class="topbar">
+      <input type="text" placeholder="Search dashboard..." />
+      <div class="admin">👤 Admin</div>
+    </header>
+
+    <!-- Cards Section -->
+    <section class="cards">
+      <div class="card">
+        <h3>Users</h3>
+        <p>1,240</p>
+      </div>
+
+      <div class="card">
+        <h3>Revenue</h3>
+        <p>₹2.4L</p>
+      </div>
+
+      <div class="card">
+        <h3>Orders</h3>
+        <p>320</p>
+      </div>
+    </section>
+
+    <!-- Stats Section -->
+    <section class="stats">
+      <div class="stat-box">
+        <h3>Growth</h3>
+        <p>+18%</p>
+      </div>
+
+      <div class="stat-box">
+        <h3>Conversion</h3>
+        <p>5.4%</p>
+      </div>
+    </section>
+
+  </div>
+</div>
 
 </body>
 </html>
+
